@startuml

hide circle
skinparam linetype ortho

entity Benchmark {
  *experiment_id: number <<FK>>
  *backup_pair_name: string <<FK>>
  --
  #received_data_size_byte: number
}

entity BackupPair {
  *experiment_id: number <<FK>>
  *name string
  --
  #data_size_byte: number
}

entity Experiment {
  *id: number <<generated>>
  --
  #network_id: number <<FK>>
}

entity Network {
  *id: number <<generated>>
  --
  #name: string
}

Benchmark |o--|| BackupPair
BackupPair }|--|| Experiment
Experiment }o--|| Network

note as n1
● -> PRIMARY KEY
◇ -> NOT NULL
end note

@enduml
